Fri Aug  2 11:07:18 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (DIST_FILES): Put `root-' before ROOTDOTS and `login-'
	before LOGINDOTS.

Wed Jul 31 12:11:02 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* passwd (games): Have no password.
	* Makefile (SYSCONFFILES): Add `group'.
	* group: New file.

Mon Jul 29 14:43:54 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* passwd: mib -> thomas.

Wed Jul 24 15:23:29 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* root-.profile: But do \ ` inside "s.

Sat Jul 20 02:13:52 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* ttys (console): Change type to `pc3'.
	(com0): Renamed from tty00.

Fri Jul 19 11:02:18 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* root-.profile: Don't \ ' inside "s.
	Advise to use `sush root', not su.

	* passwd (games): New user.

Thu Jul 18 17:24:55 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* root-.profile: Echo usual noisy message.

	* fstab: Comment out example entry so it doesn't get incorrectly
	used by accident.

Wed Jul 17 17:09:06 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* root-.bashrc: Fixup test and source of user's .root_bashrc.
	* root-.profile: Likewise.

Tue Jul 16 11:12:10 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* passwd (root): Group should be `0'.

	* Makefile: Prettier installation of dotfiles for root and login.

Mon Jul 15 19:16:30 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* ttys: Comment out tty00 entry.

Sat Jul 13 18:06:49 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makefile: Always touch /dev/null.  If OVERRIDE_CONF, then
 	$(installed_rootdots) and $(installed_conf) depend on it.
  	$(installed_logins) always depend on /dev/null.

	* Makefile (DIST_FILES): New variable.  Move rules to past
 	`include ../Makeconf'.

	* Makefile (ROOTDOTS, installed_rootdots): New variables.
	(install): Depend on $(installed_rootdots).
	($(installed_rootdots): New target.