@@ -9,12 +9,23 @@ already running Hurd system, see the file `INSTALL'.
 
 It is possible to cross-build the Hurd; the file INSTALL-cross
 contains some past instructions for doing so, but it's too much
-trouble to maintain them and make them easier.  Your best bet is to
-start with a running Hurd system already.
+trouble to maintain these instructions and keep them up to date.  Your
+best bet is to start with a running Hurd system already.
 
 Please note that this directory also contains a fair amount of
 not-yet-working code.  The makefiles build only the working code by
-default. 
+default.
+
+Bug reports for the GNU Hurd should be sent to the mailing list
+`bug-hurd@prep.ai.mit.edu'.  Please do not send requests for
+assistance in installing or using the software to that address.
+Instead, send requests for assistance to the mailing list
+`help-hurd@prep.ai.mit.edu'.  You can join these lists by sending a
+request to `bug-hurd-request@prep.ai.mit.edu' or
+`help-hurd-request@prep.ai.mit.edu' respectively.
+
+If any of these address should fail, send your message to
+`tower@gnu.ai.mit.edu' and ask him to forward it properly.
 
 The GNU Hurd is free software.  All of it, including the libraries in
 this distribution, is covered by the GNU General Public License, found
