@@ -1,0 +1,3 @@
+domain my.domain.here
+lookup bind file
+nameserver NN.NN.NN.NN
