@@ -22,9 +22,24 @@ in order to make the installation prettier.  You can rest assured,
 however: Making it prettier and easier is one of our more important
 priorities. 
 
-Bugs in this process should be sent to the mailing list
-bug-hurd@prep.ai.mit.edu.  Questions and requests for help should be
-sent to help-hurd@prep.ai.mit.edu.
+Bug reports for programs in this distribution should be sent to the
+maintainer of the program.  For a complete list of which mailing lists
+get bug reports for which programs, ask `gnu@prep.ai.mit.edu'.
+
+Bug reports for the GNU Hurd should be sent to the mailing list
+`bug-hurd@prep.ai.mit.edu'.  Please do not send requests for
+assistance in installing or using the software to that address.
+Instead, send requests for assistance to the mailing list
+`help-hurd@prep.ai.mit.edu'.  You can join these lists by sending a
+request to `bug-hurd-request@prep.ai.mit.edu' or
+`help-hurd-request@prep.ai.mit.edu' respectively.
+
+In addition, bug reports or requests for help in using the system as a
+connected whole (as opposed to for particular programs) should be sent
+to the hurd mailing lists.
+
+If any of these mailing address should fail, send your message to
+`tower@gnu.ai.mit.edu' and ask him to forward it properly.
 
 
 
