@@ -47,9 +47,10 @@ install-dist: dist-links
 dist-links:
 	mkdir -p $(dist-root)/boot
 	mkdir -p $(dist-root)/servers/socket
-	touch $(dist-root)/servers/socket/{1,2}
-	ln $(dist-root)/servers/socket/1 /servers/socket/local
-	ln $(dist-root)/servers/socket/2 /servers/socket/inet
+	touch $(dist-root)/servers/socket/1
+	touch $(dist-root)/servers/socket/2
+	ln -f $(dist-root)/servers/socket/1 $(dist-root)/servers/socket/local
+	ln -f $(dist-root)/servers/socket/2 $(dist-root)/servers/socket/inet
 endif
 
 ifneq ($(tool-root),)
