@@ -1,15 +1,16 @@
 Checklist for Hurd releases.
 
-o   Symlinks in /bin; esp. sh, awk, more, cc.
+*   Symlinks in /bin; esp. sh, awk, more, cc.
+*   Build some static fileutils: ls, ln, cp, mv, chmod.
 o   Make sure /i486-gnu contains hard links, not copies.
-o   Make sure we are using Hurd versions of su and uptime, not sh-utils.
-o   Make sure we are using Hurd fsck, not e2fs.
-o   Make install-dist from release dir.
-o   Make sure there is only a stubby resolv.conf in the distribution.
-o   Make sure /etc/fstab has no active members
-o   Make /info/dir
+*   Make sure we are using Hurd versions of su and uptime, not sh-utils.
+*   Make sure we are using Hurd fsck, not e2fs.
+*   Make install-dist from release dir.
+*   Make sure there is only a stubby resolv.conf in the distribution.
+*   Make sure /etc/fstab has no active members
+*   Make sure nethack is clean
 o   Source code for Hurd and libc must be released.
-o   Make sure everything listed in SOURCES is on prep.
+*   Make sure everything listed in SOURCES is on prep.
 o   Remove .stamp files from binary tree.
 o   Chown everything root.wheel, mode 755/644.
 o   Chown /games games.games.
