@@ -1,18 +1,44 @@
 -*- Text -*-
 
-Welcome to the GNU Hurd!
+This is the Hurd.  Welcome.
 
+This is the complete GNU system, version 0.0.  
 
-For instructions on compiling and installing the GNU Hurd from an
-already running Hurd system, see the file `INSTALL'.
+This directory contains i386 binaries for the Hurd and various
+programs built to run under it.  All program binaries are stripped to
+save disk space; the installed libraries have the debugging
+information stripped to speed linking.
 
-For instructions on compiling and installing the GNU Hurd from any
-other kind of system (including any other Mach-based system) see the
-file INSTALL-cross.
+See the file SOURCES to see where each package came from.  Remember
+that you must adhere to the GNU General Public License and the GNU
+Library General Public when distributing this binary snapshot.  See
+/share/misc/COPYING and /share/misc/COPYING.LIB for copies of these
+licenses.
 
 For instructions on installing binary images and setting up a Hurd
-system, see the file INSTALL-binary.  (These binary images could be
-the ones we distribute, or the ones you have built yourself as
-described in INSTALL-cross.)
+system, see the file INSTALL-binary.  
+
+Bug reports for programs in this distribution should be sent to the
+maintainer of the program.  For a complete list of which mailing lists
+get bug reports for which programs, ask `gnu@prep.ai.mit.edu'.
+
+Bug reports for the GNU Hurd should be sent to the mailing list
+`bug-hurd@prep.ai.mit.edu'.  Please do not send requests for
+assistance in installing or using the software to that address.
+Instead, send requests for assistance to the mailing list
+`help-hurd@prep.ai.mit.edu'.  You can join these lists by sending a
+request to `bug-hurd-request@prep.ai.mit.edu' or
+`help-hurd-request@prep.ai.mit.edu' respectively.
+
+In addition, bug reports or requests for help in using the system as a
+connected whole (as opposed to for particular programs) should be sent
+to the hurd mailing lists.
+
+If any of these mailing address should fail, send your message to
+`tower@gnu.ai.mit.edu' and ask him to forward it properly.
+
+The GNU system is free software.  See the files /share/misc/COPYING
+and /share/misc/COPYING.LIB.
+
 
 
