@@ -1,3 +1,8 @@
+Mon Aug  5 11:44:30 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
+
+	* Makefile (dist-links): Use correct pathnames for `ln' commands;
+	use -f.  Repair touch command to avoid {}.
+
 Wed Jul 31 13:15:38 1996  Miles Bader  <miles@gnu.ai.mit.edu>
 
 	* install-stripped (copy/copyattrs): New function.
